--- a/public/css/_media.scss
+++ b/public/css/_media.scss
@@ -6,8 +6,12 @@
             background-color: #fff;
             box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
             margin-bottom: 20px;
+            transition: $common-transition;
             &:last-child {
                 margin-bottom: 20px;
+            }
+            &:hover {
+                transform: scale(1.1);
             }
         }
         &_pic {
