--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -569,6 +569,9 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
     &-product {
         background-image: url(../img/product-banner.png);
     }
+    &-catalogues {
+        background-image: url(../img/Catalogues-banner.png);
+    }
 }
 
 .breadcrumb {
