--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,6 +642,10 @@ input[type=file]::-webkit-file-upload-button {
   background-image: url(../img/product-banner.png);
 }
 
+.page-banner-catalogues {
+  background-image: url(../img/Catalogues-banner.png);
+}
+
 .breadcrumb {
   padding-bottom: 30px;
 }
@@ -3323,6 +3327,224 @@ input[type=file]::-webkit-file-upload-button {
   }
   .inquiry-form_content {
     padding-right: calc((100vw - 1320px)/2 + 20px);
+  }
+}
+
+.catalogue_pic {
+  width: 100%;
+  padding-bottom: 141.81%;
+  position: relative;
+}
+
+.catalogue_pic img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  top: 0;
+  left: 0;
+}
+
+.catalogue_mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.catalogue_slider {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.catalogue_slider h2 {
+  text-align: center;
+  margin: 20px 0 30px;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+.catalogue_slider .btn-download {
+  background-color: #194C9F;
+  margin: 0 auto;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.catalogue_slider .btn-download:hover {
+  background-color: #BB000F;
+}
+
+.catalogue_slider .swiper-slide {
+  padding-left: 80px;
+  padding-right: 80px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.catalogue_slider .swiper-slide .btn-download {
+  opacity: 0;
+}
+
+.catalogue_slider .swiper-slide-active {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.catalogue_slider .swiper-slide-active .btn-download {
+  opacity: 1;
+}
+
+.catalogue_slider .swiper-slide-active h2 {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.catalogue_slider .swiper-slide-active .catalogue_pic {
+  -webkit-box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+}
+
+.catalogue_slider .swiper-slide-active .catalogue_mask {
+  opacity: 0;
+}
+
+.catalogue-content {
+  width: 100%;
+  padding-bottom: 50%;
+  background-image: url(../img/Catalogues-bg.png);
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.catalogue-content .swiper-button-next, .catalogue-content .swiper-button-prev {
+  background-image: url(../img/arrow-lightgray-right.svg);
+  background-size: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  background-color: #fff;
+  width: 35px;
+  height: 35px;
+  -webkit-box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+  margin: 0;
+  top: calc((100% - 122px) / 2);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.catalogue-content .swiper-button-next::after, .catalogue-content .swiper-button-prev::after {
+  display: none;
+}
+
+.catalogue-content .swiper-button-next {
+  right: 36.4%;
+}
+
+.catalogue-content .swiper-button-next:hover {
+  -webkit-transform: translateY(-50%) scale(1.4);
+          transform: translateY(-50%) scale(1.4);
+}
+
+.catalogue-content .swiper-button-prev {
+  left: 36.4%;
+  -webkit-transform: translateY(-50%) scaleX(-1);
+          transform: translateY(-50%) scaleX(-1);
+}
+
+.catalogue-content .swiper-button-prev:hover {
+  -webkit-transform: translateY(-50%) scaleX(-1.4) scaleY(1.4);
+          transform: translateY(-50%) scaleX(-1.4) scaleY(1.4);
+}
+
+@media screen and (max-width: 1600px) {
+  .catalogue_slider .swiper-slide {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .catalogue_slider .swiper-slide-active {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .catalogue_slider .swiper-slide {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .catalogue_slider .swiper-slide-active {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .catalogue-content .swiper-button-next {
+    right: 35%;
+  }
+  .catalogue-content .swiper-button-prev {
+    left: 35%;
+  }
+}
+
+@media screen and (max-width: 991.98px) {
+  .catalogue-content {
+    padding-bottom: 60%;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .catalogue_slider {
+    top: 50px;
+    -webkit-transform: none;
+            transform: none;
+  }
+  .catalogue_slider .swiper-slide-active h2 {
+    font-size: 28px;
+    margin: 15px auto;
+  }
+  .catalogue-content {
+    padding-bottom: calc(110% + 100px);
+  }
+  .catalogue-content .swiper-button-next {
+    right: 10%;
+  }
+  .catalogue-content .swiper-button-prev {
+    left: 10%;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .catalogue_slider .swiper-slide {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .catalogue_slider .swiper-slide-active {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .catalogue-content {
+    padding-bottom: calc(120% + 100px);
+  }
+  .catalogue-content .swiper-button-next {
+    right: 10%;
+  }
+  .catalogue-content .swiper-button-prev {
+    left: 10%;
   }
 }
 /*# sourceMappingURL=style.css.map */
