--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -572,6 +572,9 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
     &-catalogues {
         background-image: url(../img/Catalogues-banner.png);
     }
+    &-about {
+        background-image: url(../img/about-banner.png);
+    }
 }
 
 .breadcrumb {
@@ -604,6 +607,38 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
         left: 10px;
         transform: translateY(-50%);
         position: absolute;
+    }
+}
+
+.tab-common {
+    background-color: transparent;
+    justify-content: center;
+    border: 0;
+    margin-bottom: 35px;
+    .nav-item {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .nav-link {
+        border: 1px solid $gray-46;
+        padding: 10px 65px;
+        border-radius: 0;
+        transform: skew(-15deg);
+        transition: $common-transition;
+        span {
+            color: $gray-46;
+            font-weight: bold;
+            transform: skew(15deg);
+            display: block;
+            transition: $common-transition;
+        }
+        &.active, &:hover {
+            background-color: $main-blue;
+            border-radius: $main-blue;
+            span {
+                color: #fff;
+            }
+        }
     }
 }
 
@@ -733,6 +768,11 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
             }
         }
     }
+    .tab-common {
+        .nav-link {
+            padding: 10px 30px;  
+        }
+    }
 }
 
 
@@ -762,6 +802,18 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
     .page-banner {
         h1 {
             font-size: 28px;
+        }
+    }
+}
+
+@media screen and (max-width:400px) {
+    .tab-common {
+        .nav-link {
+            padding: 10px 20px;  
+        }
+        .nav-item {
+            padding-left: 2px;
+            padding-right: 2px;
         }
     }
 }
