--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,6 +1,6 @@
 @import "./common";
 @import "./index";
 @import "./media";
-@import "./introduction";
+@import "./about";
 @import "./product";
 @import "./catalogues";
