--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -615,6 +615,9 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
     justify-content: center;
     border: 0;
     margin-bottom: 35px;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    padding: 0 20px 10px;
     .nav-item {
         padding-left: 5px;
         padding-right: 5px;
@@ -631,6 +634,7 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
             transform: skew(15deg);
             display: block;
             transition: $common-transition;
+            white-space: nowrap;
         }
         &.active, &:hover {
             background-color: $main-blue;
