--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,7 +1,10 @@
 @import "./common";
 @import "./index";
-@import "./media";
+@import "./news";
 @import "./about";
 @import "./product";
 @import "./catalogues";
 @import "./qa";
+@import "./application";
+@import "./video";
+@import "./contact";
