--- a/public/css/_news.scss
+++ b/public/css/_news.scss
@@ -54,6 +54,29 @@
     }
 }
 
+
+
+.news {
+    width: 100%;
+    max-width: 900px;
+    padding: 0 20px;
+    margin: 0 auto;
+    &_detail {
+        &_pic {
+            width: 40%;
+            padding-bottom: calc(40% * 0.7067);
+        }
+        &_content {
+            margin: 30px 0 0;
+            color: $gray-46;
+            font-weight: normal;
+        }
+        &_text {
+            width: 60%;
+        }
+    }
+}
+
 @media screen and (max-width:1300px) {
     .media {
         &-list {
@@ -67,3 +90,48 @@
         }
     }
 }
+
+@media screen and (max-width:991.98px) {
+    
+}
+
+@media screen and (max-width:767.98px) {
+    .news-list {
+        >a {
+            padding: 12px;
+        }
+        .media-list_pic {
+            width: 30%;
+            padding-bottom: calc(30% * 0.7067);
+        }
+        .media-list_text {
+            width: 70%;
+        }
+    }
+    .news {
+        &_detail {
+            &_pic {
+                width: 90%;
+                padding-bottom: calc(90% * 0.7067);
+            }
+        }
+    }
+}
+
+@media screen and (max-width:575.98px) {
+    .news-list {
+        >a {
+            padding: 15px;
+        }
+        .media-list_pic {
+            width: 100%;
+            padding-bottom: calc(100% * 0.7067);
+        }
+        .media-list_text {
+            width: 100%;
+            padding: 20px 0 10px;
+        }
+    }
+    
+}
+
